Add styling to list page

--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -77,15 +77,31 @@ Events • Spooky Experiences
   <div class="col-12 col-md-6 col-lg-4">
     <div class="card h-100">
       {% if event.image %}
-      <img src="{{ event.image.url }}" class="card-img-top" alt="{{ event.title }}">
+      <img src="{{ event.image.url }}" class="card-img-top rounded-top object-fit-cover" alt="{{ event.title }}">
+      {% else %}
       {% endif %}
-      <div class="card-body">
-        <h5 class="card-title">{{ event.title }}</h5>
-        <p class="card-text text-secondary small mb-1">
+      <div class="card-body d-flex flex-column">
+
+        <h5 class="card-title mb-2 fw-bold text-light">{{ event.title }}</h5>
+        <p class="text-secondary small mb-2">
           📍 {{ event.location }} • ⭐ {{ event.rating }}
         </p>
-        <p class="card-text">{{ event.description|truncatewords:20 }}</p>
-        <a href="{% url 'event_detail' event.id %}" class="btn btn-orange w-100">View Details</a>
+
+        <p
+          class="card-text text-light flex-grow-1 text-truncate"
+          style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden;"
+        >
+          {{ event.description }}
+        </p>
+
+        <div class="mt-3 row">
+          <a
+            href="{% url 'event_detail' event.id %}"
+            class="btn btn-outline-warning btn-sm btn-block mx-auto w-50"
+          >
+            View Details
+          </a>
+        </div>
       </div>
     </div>
   </div>
