--- a/static/css/site.css
+++ b/static/css/site.css
@@ -85,3 +85,9 @@ a,
     .mx-lg-n150 { margin-left: -150px !important; margin-right: -150px !important; }
     .mt-lg-n50 { margin-top: -50px !important; }
   }
+
+  /* Make sure images fit nicely in the ratio box */
+.object-fit-cover {
+  object-fit: cover;
+}
+
