Update groups, add details url, add signup button

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -47,25 +47,19 @@ Home • Spooky Experiences
   <div class="row g-3 text-center">
 
     <div class="col-12 col-sm-6 col-lg-3">
-      <a href="/feasting/" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
-        🍗 Feasting
+      <a href="/events/?group=rnr" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
+        🛌 Rest and Relaxation
       </a>
     </div>
 
     <div class="col-12 col-sm-6 col-lg-3">
-      <a href="/cult/" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
-        🔮 Cult
-      </a>
-    </div>
-
-    <div class="col-12 col-sm-6 col-lg-3">
-      <a href="/possession/" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
+      <a href="/events/?group=possess" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
         👁️ Possession
       </a>
     </div>
 
     <div class="col-12 col-sm-6 col-lg-3">
-      <a href="/haunting/" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
+      <a href="/events/?group=haunt" class="btn btn-outline-warning w-100 py-3 fw-semibold shadow-sm">
         🕯️ Haunting
       </a>
     </div>
