Fix wrapping filter button

--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -63,7 +63,7 @@ Events • Spooky Experiences
 
   <!-- Submit Button -->
   <div class="col-6 col-md-1 d-grid">
-    <button class="btn btn-outline-warning btn-lg fw-semibold" type="submit">
+    <button class="btn btn-outline-warning btn-md text-nowrap" type="submit">
       <i class="bi bi-funnel-fill me-1"></i> Go
     </button>
   </div>
